# InfiniTrain

./: .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake
example/gpt2/: main.cc  net.cc  net.h
example/llama3/: main.cc  net.cc  net.h
infini_train/include/autograd/: attention.h
infini_train/include/nn/: functional.h
infini_train/src/autograd/: attention.cc
infini_train/src/kernels/cuda/: attention.cu
infini_train/src/nn/: functional.cc
log_precision_check/20260315_165736/rank_0/: MyModel_2_forward.npy  SimpleModel_1_backward.npy
log_precision_check/20260315_170945/rank_0/: SimpleModel_2_forward.npy
scripts/: test_config.json
test/attention/: test_attention_alignment.cc
